--- a/perturbation/pom.xml
+++ b/perturbation/pom.xml
@@ -19,7 +19,7 @@
 	<dependency>
     <groupId>fr.inria.gforge.spoon</groupId>
     <artifactId>spoon-core</artifactId>
-    <version>5.7.0</version>
+    <version>9.1.0</version>
     </dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -60,7 +60,15 @@
 	
 	<build>  
     <plugins>  
-  
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                </configuration>
+            </plugin>
         <plugin>  
             <groupId>org.apache.maven.plugins</groupId>  
             <artifactId>maven-assembly-plugin</artifactId>  
